dataStandard_versioned_docs/version-6/model-reference/student-health-domain/entities-references-descriptors.md
---
sidebar_position: 3
hide_table_of_contents: true
---

# Student Health Domain - Entities, References, and Descriptors

## Student Health Domain Entities

| Name | Description |
| --- | --- |
| StudentHealth | This event entity represents actions taken by an education organization after a disruptive event that is recorded as a discipline incident. |

## Extended References

| Name | Description |
| --- | --- |
| EducationOrganization | This entity represents an educational organization. |
| Student | This entity represents an individual for whom instruction, services, and/or care are provided in an early childhood, elementary, or secondary educational program under the jurisdiction of a school, education agency or other institution or program. A student is a person who has been enrolled in a school or other educational institution. |

## Student Health Domain Descriptors

| Name | Entity | Description | Usage Classification | EDFacts Mapping | Commonly Used | Commonly State-Defined |
| --- | --- | --- | --- | --- | --- | --- |
| AddressCharacteristic | EducationOrganization | The address characteristic mainly to reflect if Primary and type of communication to be received, e.g.: Primary, Validated, Gets Copy of Report, Discipline Correspondence. |     |     |     |     |
| AddressType | EducationOrganization | The type of address listed for an individual or organization. (For example:  Physical Address, Mailing Address, Home Address, etc.) | Orthodox |     |     |     |
| Country | EducationOrganization <br /> Student | The name of the country. It is strongly recommended that entries use only ISO 3166 2-letter country codes. | Standard |     |     |     |
| EducationOrganizationCategory | EducationOrganization | The classification of the education agency within the geographic boundaries of a state according to the level of administrative and operational control granted by the state. | Standard |     | Yes | Yes |
| IdentificationDocumentUse | Student | The primary function of the document used for establishing identity. | Orthodox |     |     |     |
| ImmunizationType | StudentHealth | An indication of the type of immunization that the student has received. |     |     |     |     |
| Indicator | EducationOrganization | The value of the indicator or metric. The semantics of an empty value is "not submitted." | Local |     |     |     |
| IndicatorGroup | EducationOrganization | The name for a group of indicators. | Local |     |     |     |
| IndicatorLevel | EducationOrganization | The value of the indicator or metric, as a value from a controlled vocabulary. The semantics of an empty value is "not submitted." | Local |     |     |     |
| InstitutionTelephoneNumberType | EducationOrganization | The type of communication number listed for an individual or organization. | Orthodox | Yes | Yes | Yes |
| Locale | EducationOrganization | A general geographic indicator that categorizes U.S. territory (e.g., City, Suburban). | Orthodox |     | Yes |     |
| NonMedicalImmunizationExemption | StudentHealth | The type of nonmedical exemption from vaccination claimed by the student's parent or guardian. | Local |     | Yes |     |
| OperationalStatus | EducationOrganization | The current operational status of the education organization (e.g., active, inactive). | Standard | Yes | Yes | Yes |
| OtherNameType | Student | The types of alternate names for an individual. | Orthodox |     |     |     |
| PersonalInformationVerification | Student | The category of the document relative to its purpose. | Orthodox |     |     |     |
| Sex | Student | A person's sex at birth. | Standard |     |     |     |
| StateAbbreviation | EducationOrganization <br /> Student | The abbreviation for the state (within the United States) or outlying area in which an address is located. | Standard |     | Yes |     |

:::tip

See [Non-Normative Descriptor Classifications](/reference/data-exchange/technical-articles/non-normative-descriptor-classifications) for more information on _Usage Classification_.

:::

The default descriptor values for ImmunizationType are based upon the 2024 list of [recommended immunizations](https://www.cdc.gov/vaccines/hcp/imz-schedules/child-adolescent-age.html) for children 18 years or younger by the CDC, as follows:

| Code    | Short Description                          |
| ------- | ------------------------------------------ |
| RSV     | Respiratory syncytial virus                |
| HepB    | Hepatitis B                                |
| RV      | Rotavirus                                  |
| DTaP    | Diphtheria, tetanus, & acellular pertussis |
| Hib     | Haemophilus influenzae type b              |
| PCV     | Pneumococcal conjugate                     |
| IPV     | Inactivated poliovirus                     |
| 1vCOV   | COVID-19                                   |
| IIV4    | Influenza                                  |
| LAIV4   | Influenza                                  |
| MMR     | Measles, mumps, rubella                    |
| VAR     | Varicella (chickenpox)                     |
| HepA    | Hepatitis A                                |
| HPV     | Human papillomavirus                       |
| MenACWY | Meningococcal serogroup A,C,W,Y            |
| MenB    | Meningococcal serogroup B                  |
| DEN4CYD | Dengue                                     |
| Mpox    | Mpox                                       |

The default descriptor values for NonMedicalImmunizationExemption are as follows:

| Code          | Short Description    |
| ------------- | -------------------- |
| Religious     | Religious belief     |
| Philosophical | Philosophical belief |
| Other         | Other                |
